--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ dgShowBacklinks=false
 dgShowLocalGraph=true
 dgShowInlineTitle=false
 dgShowFileTree=false
-dgEnableSearch=true
+dgEnableSearch=false
 dgShowToc=false
 dgLinkPreview=true
