--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 THEME=https://raw.githubusercontent.com/Bluemoondragon07/Wikipedia-Theme/main/theme.css
 BASE_THEME=dark
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=CppSeries
 SITE_BASE_URL=
 dgHomeLink=true
 dgPassFrontmatter=false
