--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ BASE_THEME=dark
 SITE_NAME_HEADER=CppSeries
 SITE_BASE_URL=
 dgHomeLink=true
-dgPassFrontmatter=false
+dgPassFrontmatter=true
 dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=true
