--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ THEME=https://raw.githubusercontent.com/Bluemoondragon07/Wikipedia-Theme/main/th
 BASE_THEME=dark
 SITE_NAME_HEADER=CppSeries
 SITE_BASE_URL=
-dgHomeLink=true
+dgHomeLink=false
 dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=true
