--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ SITE_NAME_HEADER=CppSeries
 SITE_BASE_URL=
 dgHomeLink=false
 dgPassFrontmatter=false
-dgShowBacklinks=true
+dgShowBacklinks=false
 dgShowLocalGraph=true
 dgShowInlineTitle=true
 dgShowFileTree=true
