--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ dgHomeLink=false
 dgPassFrontmatter=false
 dgShowBacklinks=false
 dgShowLocalGraph=true
-dgShowInlineTitle=true
+dgShowInlineTitle=false
 dgShowFileTree=true
 dgEnableSearch=true
-dgShowToc=true
+dgShowToc=false
 dgLinkPreview=true
