--- a/.env
+++ b/.env
@@ -4,10 +4,10 @@ SITE_NAME_HEADER=CppSeries
 SITE_BASE_URL=
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
+dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=false
 dgShowFileTree=false
 dgEnableSearch=false
-dgShowToc=false
+dgShowToc=true
 dgLinkPreview=false
