--- a/.env
+++ b/.env
@@ -9,5 +9,5 @@ dgShowLocalGraph=false
 dgShowInlineTitle=false
 dgShowFileTree=false
 dgEnableSearch=false
-dgShowToc=true
+dgShowToc=false
 dgLinkPreview=false
