--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ SITE_NAME_HEADER=CppSeries
 SITE_BASE_URL=
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
-dgShowLocalGraph=false
+dgShowBacklinks=true
+dgShowLocalGraph=true
 dgShowInlineTitle=false
 dgShowFileTree=false
 dgEnableSearch=false
