--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-THEME=https://raw.githubusercontent.com/bcdavasconcelos/Obsidian-Graphite/HEAD/theme.css
-BASE_THEME=dark
+THEME=https://raw.githubusercontent.com/erykwalder/dayspring-theme/HEAD/theme.css
+BASE_THEME=light
 SITE_NAME_HEADER=CodingGarden
 SITE_BASE_URL=
 dgHomeLink=true
