--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-THEME=https://raw.githubusercontent.com/erykwalder/dayspring-theme/HEAD/theme.css
-BASE_THEME=light
+THEME=https://raw.githubusercontent.com/lucas-fern/obsidian-deeper-work-theme/HEAD/theme.css
+BASE_THEME=dark
 SITE_NAME_HEADER=CodingGarden
 SITE_BASE_URL=
 dgHomeLink=true
