--- a/.env
+++ b/.env
@@ -4,10 +4,10 @@ SITE_NAME_HEADER=CodingGarden
 SITE_BASE_URL=
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=true
+dgShowBacklinks=false
 dgShowLocalGraph=false
 dgShowInlineTitle=true
 dgShowFileTree=true
 dgEnableSearch=true
-dgShowToc=true
+dgShowToc=false
 dgLinkPreview=true
