--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ dgPassFrontmatter=false
 dgShowBacklinks=false
 dgShowLocalGraph=false
 dgShowInlineTitle=false
-dgShowFileTree=true
-dgEnableSearch=true
+dgShowFileTree=false
+dgEnableSearch=false
 dgShowToc=false
 dgLinkPreview=true
