--- a/.env
+++ b/.env
@@ -2,12 +2,12 @@ THEME=https://raw.githubusercontent.com/erykwalder/dayspring-theme/HEAD/theme.cs
 BASE_THEME=light
 SITE_NAME_HEADER=CodingGarden
 SITE_BASE_URL=
-dgHomeLink=false
+dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
-dgShowLocalGraph=false
-dgShowInlineTitle=false
+dgShowBacklinks=true
+dgShowLocalGraph=true
+dgShowInlineTitle=true
 dgShowFileTree=false
 dgEnableSearch=false
-dgShowToc=false
+dgShowToc=true
 dgLinkPreview=false
