--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=true
-dgShowFileTree=true
-dgEnableSearch=true
+dgShowFileTree=false
+dgEnableSearch=false
 dgShowToc=true
 dgLinkPreview=false
