--- a/.env
+++ b/.env
@@ -4,10 +4,10 @@ SITE_NAME_HEADER=CodingGarden
 SITE_BASE_URL=
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=true
+dgShowBacklinks=false
 dgShowLocalGraph=true
 dgShowInlineTitle=false
 dgShowFileTree=false
 dgEnableSearch=false
-dgShowToc=true
+dgShowToc=false
 dgLinkPreview=false
