--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ SITE_BASE_URL=
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
-dgShowLocalGraph=true
+dgShowLocalGraph=false
 dgShowInlineTitle=false
 dgShowFileTree=false
 dgEnableSearch=false
