--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@ THEME=https://raw.githubusercontent.com/erykwalder/dayspring-theme/HEAD/theme.cs
 BASE_THEME=light
 SITE_NAME_HEADER=CodingGarden
 SITE_BASE_URL=
-dgHomeLink=true
+dgHomeLink=false
 dgPassFrontmatter=false
 dgShowBacklinks=false
 dgShowLocalGraph=false
-dgShowInlineTitle=false
+dgShowInlineTitle=true
 dgShowFileTree=false
 dgEnableSearch=false
 dgShowToc=false
