--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ dgShowBacklinks=false
 dgShowLocalGraph=false
 dgShowInlineTitle=true
 dgShowFileTree=true
-dgEnableSearch=false
+dgEnableSearch=true
 dgShowToc=false
 dgLinkPreview=false
