--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ SITE_NAME_HEADER=CodingGarden
 SITE_BASE_URL=
 dgHomeLink=false
 dgPassFrontmatter=false
-dgShowBacklinks=true
+dgShowBacklinks=false
 dgShowLocalGraph=false
 dgShowInlineTitle=true
 dgShowFileTree=true
