--- a/.env
+++ b/.env
@@ -9,5 +9,5 @@ dgShowLocalGraph=false
 dgShowInlineTitle=true
 dgShowFileTree=true
 dgEnableSearch=true
-dgShowToc=true
+dgShowToc=false
 dgLinkPreview=true
