--- a/.env
+++ b/.env
@@ -2,12 +2,12 @@ THEME=https://raw.githubusercontent.com/erykwalder/dayspring-theme/HEAD/theme.cs
 BASE_THEME=light
 SITE_NAME_HEADER=CodingGarden
 SITE_BASE_URL=
-dgHomeLink=true
+dgHomeLink=false
 dgPassFrontmatter=false
-dgShowBacklinks=false
-dgShowLocalGraph=false
+dgShowBacklinks=true
+dgShowLocalGraph=true
 dgShowInlineTitle=true
 dgShowFileTree=true
 dgEnableSearch=true
-dgShowToc=false
+dgShowToc=true
 dgLinkPreview=true
