--- a/.env
+++ b/.env
@@ -4,10 +4,10 @@ SITE_NAME_HEADER=CodingGarden
 SITE_BASE_URL=
 dgHomeLink=false
 dgPassFrontmatter=false
-dgShowBacklinks=true
-dgShowLocalGraph=true
-dgShowInlineTitle=true
+dgShowBacklinks=false
+dgShowLocalGraph=false
+dgShowInlineTitle=false
 dgShowFileTree=true
 dgEnableSearch=true
-dgShowToc=true
+dgShowToc=false
 dgLinkPreview=true
