--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ THEME=https://raw.githubusercontent.com/erykwalder/dayspring-theme/HEAD/theme.cs
 BASE_THEME=light
 SITE_NAME_HEADER=CodingGarden
 SITE_BASE_URL=
-dgHomeLink=true
+dgHomeLink=false
 dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=true
