--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ THEME=https://raw.githubusercontent.com/colineckert/obsidian-things/HEAD/theme.c
 BASE_THEME=dark
 SITE_NAME_HEADER=CodingGarden
 SITE_BASE_URL=
-dgHomeLink=true
+dgHomeLink=false
 dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=false
